--- a/my-app/src/Compenents/dashboard.css
+++ b/my-app/src/Compenents/dashboard.css
@@ -12,3 +12,36 @@
     background: rgba(250,250,250,0.3);
     border-radius: 12px;
 }
+.btn {
+    background: #F0EB8D;
+    background-image: -webkit-linear-gradient(top, #F0EB8D, #2980b9);
+    background-image: -moz-linear-gradient(top, #F0EB8D, #2980b9);
+    background-image: -ms-linear-gradient(top, #F0EB8D, #2980b9);
+    background-image: -o-linear-gradient(top, #F0EB8D, #2980b9);
+    background-image: linear-gradient(to bottom, #F0EB8D, #2980b9);
+    -webkit-border-radius: 16;
+    -moz-border-radius: 16;
+    border-radius: 16px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 16px;
+    padding: 6px 24px 6px 24px;
+    text-decoration: none;
+    transition: background .5s;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    height: 2.5rem;
+}
+
+.btn:hover {
+    background: #2980b9;
+    background-image: -webkit-linear-gradient(top, #F0EB8D, #F0EB8D);
+    background-image: -moz-linear-gradient(top, #F0EB8D, #F0EB8D);
+    background-image: -ms-linear-gradient(top, #F0EB8D, #F0EB8D);
+    background-image: -o-linear-gradient(top, #F0EB8D, #F0EB8D);
+    background-image: linear-gradient(to bottom, #F0EB8D, #F0EB8D);
+    text-decoration: none;
+    animation: background;
+    color: rgba(0, 0 , 0 , 0.4);
+}
