--- a/my-app/src/Compenents/dashboard.css
+++ b/my-app/src/Compenents/dashboard.css
@@ -45,3 +45,18 @@
     animation: background;
     color: rgba(0, 0 , 0 , 0.4);
 }
+.modal-style{
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+}
+@media (max-width: 65em) {
+    .modal-style{
+        text-align: center;
+        display: grid;
+        grid-template-columns: auto auto;
+        align-content: space-around;
+        gap: 1em;
+    }
+}
