--- a/my-app/src/Compenents/FormPdf.css
+++ b/my-app/src/Compenents/FormPdf.css
@@ -12,9 +12,8 @@
     background: rgba(250,250,250,0.3);
     border-radius: 12px;
     display: grid;
-    justify-content: space-around;
-    align-content: space-around;
-    grid-template-columns: auto auto;
+    justify-content: center;
+    align-content: start;
 }
 @media (max-width: 65em) {
     .hero-content-form-pdf{
