I have finish the responsive of the list

--- a/my-app/src/Compenents/FormPdf.css
+++ b/my-app/src/Compenents/FormPdf.css
@@ -17,8 +17,7 @@
 }
 @media (max-width: 65em) {
     .hero-content-form-pdf{
-        display: flex;
-        flex-direction: column;
-        margin: 0 1em;
+        display: grid;
+        justify-content: center;
     }
 }
