--- a/my-app/src/Compenents/FormPdf.css
+++ b/my-app/src/Compenents/FormPdf.css
@@ -11,13 +11,5 @@
     height: 70vh;
     background: rgba(250,250,250,0.3);
     border-radius: 12px;
-    display: grid;
-    justify-content: center;
-    align-content: start;
-}
-@media (max-width: 65em) {
-    .hero-content-form-pdf{
-        display: grid;
-        justify-content: center;
-    }
+    padding: 0 3rem;
 }
