--- a/my-app/src/Compenents/Download.css
+++ b/my-app/src/Compenents/Download.css
@@ -1,4 +1,46 @@
 .main-content{
-    max-width: 1170px;
     width: 100%;
+    position: relative;
+    max-width: 1440px;
+}
+.content-image-navbar{
+    width: 100%;
+    border: 1px solid;
+    display: flex;
+}
+.image-content{
+    width: 25%;
+    height: 100vh;
+    background: url(https://images.pexels.com/photos/4407002/pexels-photo-4407002.jpeg?auto=compress&cs=tinysrgb&w=600) no-repeat center center/cover;
+}
+.content-pdf{
+    width: 75%;
+    height: 100vh;
+    background-color: #FFF2CC;
+}
+.logo-content{
+    background-color: rgba(255, 255, 255, 0.3);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+.navbar-content{
+    display: flex;
+    justify-content: flex-end;
+    padding: 1rem 6rem;
+}
+.title-file-content{
+    border-radius: 12px;
+    width: 80%;
+    margin: 3rem auto;
+    box-shadow:
+    -3.3px -4.4px 5.7px rgba(0, 0, 0, 0.02),
+    -5.6px -7.5px 13.1px rgba(0, 0, 0, 0.027),
+    -6.3px -8.4px 23.6px rgba(0, 0, 0, 0.032),
+    -4.6px -6.1px 39.2px rgba(0, 0, 0, 0.036),
+    1.7px 2.3px 64.5px rgba(0, 0, 0, 0.04),
+    20.1px 26.9px 112.8px rgba(0, 0, 0, 0.046),
+    109px 146px 244px rgba(0, 0, 0, 0.06)
+;
 }
